--- a/spruce/settings/platform/Flip.cfg
+++ b/spruce/settings/platform/Flip.cfg
@@ -17,6 +17,7 @@ export EVENT_PATH_JOYPAD="/dev/input/event5"
 export EVENT_PATH_VOLUME="/dev/input/event0"
 
 export SD_DEV="/dev/mmcblk1p1"
+export SD2_DEV="/dev/mmcblk2p1"
 
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/flip/bin/python3
 
