@KitFox0618 PPSSPP settings
Update and enhance PPSSPP default settings

Frameskip - 3

Desposturize txt - true

Co-Authored-By: KitFox0618 <203579983+KitFox0618@users.noreply.github.com>

--- a/Emu/.emu_setup/.config/ppsspp/PSP/SYSTEM/ppsspp-Brick.ini
+++ b/Emu/.emu_setup/.config/ppsspp/PSP/SYSTEM/ppsspp-Brick.ini
@@ -108,7 +108,7 @@ TextureFiltering = 1
 InternalResolution = 2
 AndroidHwScale = 1
 HighQualityDepth = 1
-FrameSkip = 0
+FrameSkip = 3
 FrameSkipType = 0
 AutoFrameSkip = False
 StereoRendering = False
@@ -138,7 +138,7 @@ SaveNewTextures = False
 IgnoreTextureFilenames = False
 TexScalingLevel = 1
 TexScalingType = 0
-TexDeposterize = False
+TexDeposterize = True
 TexHardwareScaling = False
 VSyncInterval = False
 BloomHack = 0
