--- a/Emu/.emu_setup/.config/ppsspp/PSP/SYSTEM/ppsspp-A30.ini
+++ b/Emu/.emu_setup/.config/ppsspp/PSP/SYSTEM/ppsspp-A30.ini
@@ -108,7 +108,7 @@ TextureFiltering = 1
 InternalResolution = 1
 AndroidHwScale = 1
 HighQualityDepth = 1
-FrameSkip = 1
+FrameSkip = 3
 FrameSkipType = 0
 AutoFrameSkip = True
 StereoRendering = False
@@ -137,7 +137,7 @@ SaveNewTextures = False
 IgnoreTextureFilenames = False
 TexScalingLevel = 1
 TexScalingType = 0
-TexDeposterize = False
+TexDeposterize = True
 TexHardwareScaling = False
 VSync = False
 BloomHack = 0
