--- a/Emu/.emu_setup/.config/ppsspp/PSP/SYSTEM/ppsspp-Flip.ini
+++ b/Emu/.emu_setup/.config/ppsspp/PSP/SYSTEM/ppsspp-Flip.ini
@@ -112,7 +112,7 @@ TextureFiltering = 1
 InternalResolution = 1
 AndroidHwScale = 1
 HighQualityDepth = 1
-FrameSkip = 1
+FrameSkip = 3
 FrameSkipType = 0
 AutoFrameSkip = True
 StereoRendering = False
@@ -141,7 +141,7 @@ SaveNewTextures = False
 IgnoreTextureFilenames = False
 TexScalingLevel = 1
 TexScalingType = 0
-TexDeposterize = False
+TexDeposterize = True
 TexHardwareScaling = False
 VSync = False
 BloomHack = 0
