Update mupen64plus configs.
Co-authored-by: LonkoDeLonk <delonkaudio@gmail.com>

--- a/Emu/N64/mupen64plus/.config/mupen64plus/mupen64plus.cfg
+++ b/Emu/N64/mupen64plus/.config/mupen64plus/mupen64plus.cfg
@@ -54,15 +54,15 @@ CountPerOpDenomPot = 0
 # Increment the save state slot after each save operation
 AutoStateSlotIncrement = False
 # Save state slot (0-9) to use when saving/loading the emulator state
-CurrentStateSlot = 5
+CurrentStateSlot = 0
 # Activate the R4300 debugger when ROM execution begins, if core was built with Debugger support
 EnableDebugger = False
 # Path to directory where screenshots are saved. If this is blank, the default value of ${UserDataPath}/screenshot will be used
-ScreenshotPath = ""
+ScreenshotPath = "/mnt/SDCARD/Saves/screenshots/mupen64plus"
 # Path to directory where emulator save states (snapshots) are saved. If this is blank, the default value of ${UserDataPath}/save will be used
-SaveStatePath = ""
+SaveStatePath = "/mnt/SDCARD/Saves/states/mupen64plus"
 # Path to directory where SRAM/EEPROM data (in-game saves) are stored. If this is blank, the default value of ${UserDataPath}/save will be used
-SaveSRAMPath = ""
+SaveSRAMPath = "/mnt/SDCARD/Saves/saves/mupen64plus"
 # Path to a directory to search when looking for shared data files
 SharedDataPath = ""
 # Randomize PI/SI Interrupt Timing
@@ -142,7 +142,7 @@ Joy Mapping Load State = "J0B8/B4"
 # Joystick event string for advancing the save state slot
 Joy Mapping Increment Slot = "J0B8/H0V2"
 # Joystick event string for resetting the emulator
-Joy Mapping Reset = "J0B8/B1"
+Joy Mapping Reset = "J0B8/B0"
 # Joystick event string for slowing down the emulator
 Joy Mapping Speed Down = ""
 # Joystick event string for speeding up the emulator
@@ -152,7 +152,7 @@ Joy Mapping Screenshot = "J0B8/B2"
 # Joystick event string for pausing the emulator
 Joy Mapping Pause = "J0B8/B3"
 # Joystick event string for muting/unmuting the sound
-Joy Mapping Mute = "J0B8/B0"
+Joy Mapping Mute = "J0B8/B1"
 # Joystick event string for increasing the volume
 Joy Mapping Increase Volume = ""
 # Joystick event string for decreasing the volume
@@ -223,11 +223,11 @@ version = 2.000000
 # Controller configuration mode: 0=Fully Manual, 1=Auto with named SDL Device, 2=Fully automatic
 mode = 2
 # Specifies which joystick is bound to this controller: -1=No joystick, 0 or more= SDL Joystick number
-device = -1
+device = 1
 # SDL joystick name (or Keyboard)
-name = ""
+name = "Xbox 360 Controller"
 # Specifies whether this controller is 'plugged in' to the simulated N64
-plugged = False
+plugged = True
 # Specifies which type of expansion pak is in the controller: 1=None, 2=Mem pak, 4=Transfer pak, 5=Rumble pak
 plugin = 2
 # If True, then mouse buttons may be used with this controller
@@ -239,25 +239,25 @@ AnalogDeadzone = "4096,4096"
 # An absolute value of the SDL joystick axis >= AnalogPeak will saturate the N64 controller axis value (at 80).  For X, Y axes. For each axis, this must be greater than the corresponding AnalogDeadzone value
 AnalogPeak = "32768,32768"
 # Digital button configuration mappings
-DPad R = ""
-DPad L = ""
-DPad D = ""
-DPad U = ""
-Start = ""
-Z Trig = ""
-B Button = ""
-A Button = ""
-C Button R = ""
-C Button L = ""
-C Button D = ""
-C Button U = ""
-R Trig = ""
-L Trig = ""
-Mempak switch = ""
-Rumblepak switch = ""
+DPad R = "hat(0 Right)"
+DPad L = "hat(0 Left)"
+DPad D = "hat(0 Down)"
+DPad U = "hat(0 Up)"
+Start = "button(7)"
+Z Trig = "axis(2+)"
+B Button = "key(98)"
+A Button = "key(97)"
+C Button R = "key(108)"
+C Button L = "key(106)"
+C Button D = "key(107)"
+C Button U = "key(105)"
+R Trig = "button(5)"
+L Trig = "button(4)"
+Mempak switch = "key(44)"
+Rumblepak switch = "key(46)"
 # Analog axis configuration mappings
-X Axis = ""
-Y Axis = ""
+X Axis = "axis(0-,0+)"
+Y Axis = "axis(1-,1+)"
 
 
 [Input-SDL-Control3]
