Update mupen standalone input autoconfig to allow right stick to act as C buttons on 2-stick devices.
Co-authored-by: LonkoDeLonk <delonkaudio@gmail.com>

--- a/Emu/N64/mupen64plus/InputAutoCfg.ini
+++ b/Emu/N64/mupen64plus/InputAutoCfg.ini
@@ -37,10 +37,10 @@ Start = button(7)
 Z Trig = axis(2+)
 B Button = key(98)
 A Button = key(97)
-C Button R = key(108)
-C Button L = key(106)
-C Button D = key(107)
-C Button U = key(105)
+C Button R = axis(3+,2400) key(108)
+C Button L = axis(3-,2400) key(106)
+C Button D = axis(4+,2400) key(107)
+C Button U = axis(4-,2400) key(105)
 R Trig = button(5)
 L Trig = button(4)
 Mempak switch = key(44)
