Consolidate Naomi and DC launch logic

--- a/Emu/DC/config.json
+++ b/Emu/DC/config.json
@@ -45,7 +45,7 @@
         "Flycast-libretro",
         "Flycast-standalone"
       ],
-      "selected": "flycast-libretro",
+      "selected": "Flycast-libretro",
       "overrides": {}
     }
   },
