Further runtime.sh cleanup

--- a/spruce/settings/platform/A30.cfg
+++ b/spruce/settings/platform/A30.cfg
@@ -2,6 +2,7 @@
 # Miyoo A30 platform specific variables
 
 export SYSTEM_JSON="/mnt/SDCARD/Saves/a30-system.json"
+export SYSTEM_PATH="/mnt/SDCARD/miyoo"
 
 export DISPLAY_WIDTH="640"
 export DISPLAY_HEIGHT="480"
