--- a/spruce/settings/platform/Brick.cfg
+++ b/spruce/settings/platform/Brick.cfg
@@ -2,6 +2,7 @@
 # TRIMUI Brick platform specific variables
 
 export SYSTEM_JSON="/mnt/SDCARD/Saves/brick-system.json"
+export SYSTEM_PATH="/mnt/SDCARD/trimui"
 
 export DISPLAY_WIDTH="1024"
 export DISPLAY_HEIGHT="768"
