--- a/spruce/settings/platform/Flip.cfg
+++ b/spruce/settings/platform/Flip.cfg
@@ -2,6 +2,8 @@
 # Miyoo Flip platform specific variables
 
 export SYSTEM_JSON="/mnt/SDCARD/Saves/flip-system.json"
+export SYSTEM_PATH="/mnt/SDCARD/miyoo355"
+
 
 export DISPLAY_WIDTH="640"
 export DISPLAY_HEIGHT="480"
