--- a/spruce/settings/platform/SmartPro.cfg
+++ b/spruce/settings/platform/SmartPro.cfg
@@ -2,6 +2,7 @@
 # TRIMUI Smart Pro platform specific variables
 
 export SYSTEM_JSON="/mnt/SDCARD/Saves/smartpro-system.json"
+export SYSTEM_PATH="/mnt/SDCARD/trimui"
 
 export DISPLAY_WIDTH="1280"
 export DISPLAY_HEIGHT="720"
