Move pico8 stretch setting from settings_config into Emu/PICO8/config.json

--- a/Emu/PICO8/config.json
+++ b/Emu/PICO8/config.json
@@ -32,6 +32,15 @@
       ],
       "selected": "Smart",
       "overrides": {}
+    },
+    "Stretch": {
+      "display": "Stretch to Full Screen",
+      "options": [
+        "True",
+        "False"
+      ],
+      "selected": "False",
+      "overrides": {}
     }
   },
   "sortOrder": 4800,
