Enable spruce-config.json; add $@ to pyui launch for A30 to accept being called with additional args; move lowPowerWarningPercent to spruce-config.json

--- a/Saves/spruce/spruce-config.json
+++ b/Saves/spruce/spruce-config.json
@@ -1,5 +1,19 @@
 {
     "menuOptions": {
+        "Battery Settings": {
+            "lowPowerWarningPercent": {
+                "display": "Low power warning percent",
+                "options": [
+                    "Off",
+                    "4",
+                    "8",
+                    "12",
+                    "16",
+                    "20"
+                ],
+                "selected": "4"
+            }
+        },
         "Boot Settings": {
             "checkForUpdates": {
                 "display": "Check for spruce updates on startup",
