Move LED mode to spruce-config.json; poll for update to LED mode setting every 10 seconds; chuck blue light filter as its functionality is already configurable elsewhere

--- a/Saves/spruce/spruce-config.json
+++ b/Saves/spruce/spruce-config.json
@@ -1,6 +1,15 @@
 {
     "menuOptions": {
         "Battery Settings": {
+            "ledMode": {
+                "display": "Power indicator LED mode",
+                "options": [
+                    "Always off",
+                    "On in menu only",
+                    "Always on"
+                ],
+                "selected": "Always off"
+            },
             "lowPowerWarningPercent": {
                 "display": "Low power warning percent",
                 "options": [
