migrate shutdown after sleep setting from settings_config to spruce-config.json; kill ffplay_is_now_media.sh

--- a/Saves/spruce/spruce-config.json
+++ b/Saves/spruce/spruce-config.json
@@ -22,6 +22,19 @@
                 ],
                 "selected": "4"
             },
+            "shutdownFromSleep": {
+                "display": "Shutdown after sleeping",
+                "options": [
+                    "Off",
+                    "Instant",
+                    "2m",
+                    "5m",
+                    "10m",
+                    "30m",
+                    "60m"
+                ],
+                "selected": "5m"
+            },
             "idlemonInMenu": {
                 "display": "Shutdown while idle in menu",
                 "options": [
