move RA in-game menu setting out of advanced settings

--- a/Saves/spruce/spruce-config.json
+++ b/Saves/spruce/spruce-config.json
@@ -95,6 +95,14 @@
                     "Exit game"
                 ],
                 "selected": "Game Switcher"
+            },
+            "raInGameMenu": {
+                "display": "RA: use in-game menu",
+                "options": [
+                    "True",
+                    "False"
+                ],
+                "selected": "True"
             }
         }
     }
