Add gameswitcher w/ custom list capability into PyuI

--- a/App/PyUI/py-ui-config.json
+++ b/App/PyUI/py-ui-config.json
@@ -7,5 +7,6 @@
     "mainMenuTitle": "spruceOS",
     "gameSystemSortMode": "SortOrderKey",
     "includeStockOsLaunchOption": false,
-    "allowPyUiGameSwitcher": false
+    "allowPyUiGameSwitcher": true,
+    "gameSwitcherPath": "/mnt/SDCARD/Saves/gameswitcher.json"
 }
