Move Perfect Overlays from settings_config to spruce-config.json; apply or remove them at time of standard_launch based on combo of setting and flag check.

--- a/Saves/spruce/spruce-config.json
+++ b/Saves/spruce/spruce-config.json
@@ -103,6 +103,15 @@
                     "False"
                 ],
                 "selected": "True"
+            },
+            "perfectOverlays": {
+                "display": "GB[C/A]: use Perfect Overlays",
+                "description": "provided by 1PlayerInsertCoin and Mugwomp93",
+                "options": [
+                    "True",
+                    "False"
+                ],
+                "selected": "False"
             }
         }
     }
