Move OTA skip version check (aka allow reinstall) from old settings to new settings system

--- a/Saves/spruce/spruce-config.json
+++ b/Saves/spruce/spruce-config.json
@@ -113,6 +113,17 @@
                 ],
                 "selected": "False"
             }
+        },
+        "Network Settings": {
+            "otaSkipVersionCheck": {
+                "display": "OTA: skip version check",
+                "description":"allows reinstall of same spruce version",
+                "options":[
+                    "True",
+                    "False"
+                ],
+                "selected":"False"
+            }
         }
     }
 }
