Revert "PyUI Game Switcher"

--- a/App/PyUI/py-ui-config.json
+++ b/App/PyUI/py-ui-config.json
@@ -7,6 +7,5 @@
     "mainMenuTitle": "spruceOS",
     "gameSystemSortMode": "SortOrderKey",
     "includeStockOsLaunchOption": false,
-    "allowPyUiGameSwitcher": true,
-    "gameSwitcherPath": "/mnt/SDCARD/Saves/gameswitcher.json"
+    "allowPyUiGameSwitcher": false
 }
