Begin work on a 'simple' mode to lock the device into

--- a/App/-FirmwareUpdate-/config.json
+++ b/App/-FirmwareUpdate-/config.json
@@ -3,5 +3,6 @@
   "icon": "firmwareupdate.png",
   "launch": "launch.sh",
   "description": "Run this to get the latest fixes",
-  "hide": false
+  "hide": false,
+  "hideInSimpleMode": true
 }
