--- a/App/BootLogo/config.json
+++ b/App/BootLogo/config.json
@@ -3,5 +3,6 @@
   "icon": "bootlogo.png",
   "launch": "launch.sh",
   "description": "Swap the boot logo at start up",
-  "hide": true
+  "hide": true,
+  "hideInSimpleMode": true
 }
