--- a/App/ThemeGarden/config.json
+++ b/App/ThemeGarden/config.json
@@ -3,5 +3,6 @@
   "icon": "themegallery.png",
   "launch": "launch.sh",
   "description": "Check out the latest themes for your device!",
-  "hide": false
+  "hide": false,
+  "hideInSimpleMode": true
 }
