--- a/App/USBStorageMode/config.json
+++ b/App/USBStorageMode/config.json
@@ -4,5 +4,6 @@
   "launch": "launch.sh",
   "description": "Transfer files over USB",
   "devices": ["TRIMUI_BRICK", "MIYOO_A30", "MIYOO_FLIP"],
-  "hide": false
+  "hide": false,
+  "hideInSimpleMode": true
 }
