--- a/multipass.cfg
+++ b/multipass.cfg
@@ -2,20 +2,21 @@
 
 # MULTIPASS.CFG - HOW TO USE:
 #
-# This file provides an optional way to store up to 5 different WiFi networks
-# on your A30. Type the SSID, password and hidden status of your desired networks inside the
-# quotation marks in each parameter below, starting with ID_1, PW_1 and HIDDEN_1.
-# HIDDEN_x parameter is "1" for hidden networks and "0" for visible networks and this parameter is optional.
+# This file provides an optional way to quickly add up to 5 different WiFi 
+# networks on your spruce device. Type the SSID, password, and hidden status 
+# of your desired networks inside the quotation marks in each parameter below,
+# starting with ID_1, PW_1 and HIDDEN_1. HIDDEN_x should be set to "1" for 
+# hidden networks and "0" for visible networks. This field is optional.
 #
-# On your next boot, the A30 will interpret this file and convert it into an
+# On your next boot, the device will interpret this file and convert it into an
 # actual WiFi configuration. Then, this file will delete itself for security
 # reasons. Because you must enter your passwords in clear text in this file, it
-# is imperative that you boot your A30 immediately after filling it out. The 
+# is imperative that you boot your device immediately after filling it out. The 
 # spruce team takes NO responsibility for you leaving your SD card lying around
 # with your network passwords on it. Use it or lose it!
 #
-# You may safely ignore or delete this file if you wish to continue using the
-# built-in WiFi menu in the MainUI on your device.
+# You may safely ignore or delete this file if you wish to simply use the UI
+# provided in the settings menu of your device to add new networks.
 
 ID_1=""
 PW_1=""
