Change Boot Settings to System Settings to be more inclusive

--- a/Saves/spruce/spruce-config.json
+++ b/Saves/spruce/spruce-config.json
@@ -75,7 +75,7 @@
                 "selected": "False"
             }
         },
-        "Boot Settings": {
+        "System Settings": {
             "checkForUpdates": {
                 "display": "Check for spruce updates on startup",
                 "options": [
