--- a/App/PyUI/spruce-tasks.json
+++ b/App/PyUI/spruce-tasks.json
@@ -1,12 +1,14 @@
 {
-"Immediate": "touch /mnt/SDCARD/Immediate.txt",
-"Folder/A":  "touch /mnt/SDCARD/A.txt",
-"Folder/B/Option in B": "touch /mnt/SDCARD/B.txt",
-"descriptions": {
-    "Immediate": "This option creates a file named Immediate.txt in the SDCARD root directory.",
-    "Folder": "This folder contains options A and B.",
-    "A": "This option creates a file named A.txt in the SDCARD root directory.",
-    "B": "This is the B folder.",
-    "Option in B": "This option creates a file named B.txt in the SDCARD root directory."
+  "Forget all WiFi networks": "/mnt/SDCARD/spruce/scripts/tasks/clearwifi.sh",
+  "Reset RetroArch hotkeys": "/mnt/SDCARD/spruce/scripts/tasks/resetRAHotkeys.sh",
+  "Reset RetroArch config":  "/mnt/SDCARD/spruce/scripts/tasks/resetRA.sh",
+  "Reset PPSSPP config": "/mnt/SDCARD/spruce/scripts/tasks/resetPPSSPP.sh",
+  "Clean up macOS dotfiles": "/mnt/SDCARD/spruce/scripts/tasks/deleteMacFiles.sh",
+  "descriptions": {
+    "Forget all WiFi networks": "disconnect and clear all saved networks",
+    "Reset RetroArch hotkeys": "reapply spruce default RA hotkey layout",
+    "Reset RetroArch config": "restore spruce default RA config for current device",
+    "Reset PPSSPP config": "restore spruce default PPSSPP hotkeys and config",
+    "Clean up macOS dotfiles": "delete any junk files created by macOS"
   }
 }
