Move Flip's extended brightness control to new settings area

--- a/Saves/spruce/spruce-config.json
+++ b/Saves/spruce/spruce-config.json
@@ -104,6 +104,16 @@
                     "Off"
                 ],
                 "selected": "Medium"
+            },
+            "extendedBrightness": {
+                "devices": ["MIYOO_FLIP"],
+                "display": "Extended brightness controls",
+                "description": "Start + L/R change contrast at minimum brightness",
+                "options": [
+                    "True",
+                    "False"
+                ],
+                "selected": "False"
             }
         },
         "Emulator Settings": {
