move genesis plus gx wide setting to new settings menu

--- a/Saves/spruce/spruce-config.json
+++ b/Saves/spruce/spruce-config.json
@@ -161,6 +161,16 @@
                     "False"
                 ],
                 "selected": "False"
+            },
+            "genesisPlusGXWide": {
+                "devices": ["TRIMUI_SMART_PRO"],
+                "display": "Genesis Plus GX: enable widescreen",
+                "description": "use widescreen hacked core when available",
+                "options": [
+                    "True",
+                    "False"
+                ],
+                "selected": "False"
             }
         },
         "Network Settings": {
