Add "Nothing" options to hold and tap home setting; stare confusedly at homebutton watchdog until it somewhat starts to click

--- a/Saves/spruce/spruce-config.json
+++ b/Saves/spruce/spruce-config.json
@@ -132,7 +132,8 @@
                 "options": [
                     "Emulator menu",
                     "Game Switcher",
-                    "Exit game"
+                    "Exit game",
+                    "Nothing"
                 ],
                 "selected": "Emulator menu"
             },
@@ -141,7 +142,8 @@
                 "options": [
                     "Emulator menu",
                     "Game Switcher",
-                    "Exit game"
+                    "Exit game",
+                    "Nothing"
                 ],
                 "selected": "Game Switcher"
             },
