little bit of app cleanup

--- a/App/BootLogo/config.json
+++ b/App/BootLogo/config.json
@@ -1,5 +1,5 @@
 {
-  "#label": "Boot Logo",
+  "label": "Boot Logo",
   "icon": "bootlogo.png",
   "launch": "launch.sh",
   "description": "Swap the boot logo at start up",
