--- a/App/spruceRestore/config.json
+++ b/App/spruceRestore/config.json
@@ -1,5 +1,5 @@
 {
-  "#label": "Spruce Restore",
+  "label": "Spruce Restore",
   "icon": "restore.png",
   "launch": "launch.sh",
   "description": "Restore configs & settings from backup",
