add enable_or_disable_rgb helper for use in principal.sh;  remove remnants of old switcher

--- a/Saves/spruce/spruce-config.json
+++ b/Saves/spruce/spruce-config.json
@@ -274,7 +274,7 @@
             "disableLEDs": {
                 "display": "Disable RGB LEDs in all contexts",
                 "devices": ["TRIMUI_BRICK", "TRIMUI_SMART_PRO"],
-                "description": "requires reboot to apply",
+                "description": "reload UI to apply",
                 "options": [
                     "True",
                     "False"
