blank out main menu title on spruce theme

--- a/Themes/SPRUCE/config.json
+++ b/Themes/SPRUCE/config.json
@@ -44,5 +44,6 @@
     "recentsEnabled": false,
     "topBarInitialXOffset": 60,
     "setTopBarTextToGameSelection": true,
-    "fullScreenGridGameMenuResizeType": "FIT"
+    "fullScreenGridGameMenuResizeType": "FIT",
+    "mainMenuTitle": ""
 }
